Fix csv-uploads table headers wrap

--- a/sass/blocks/_boss-table.sass
+++ b/sass/blocks/_boss-table.sass
@@ -857,7 +857,7 @@ $block: ".boss-table"
         padding-left: 20px
 
       #{$block}_page_csv-upload &
-        width: 11.1%
+        width: 11%
         padding-left: 10px
         border-right: 1px solid #eee
 
@@ -1122,7 +1122,7 @@ $block: ".boss-table"
         padding-left: 20px
 
       #{$block}_page_csv-upload &
-        width: 11.1%
+        width: 11%
         border-right: 1px solid #eee
 
       #{$block}_page_holiday-requests &
@@ -1351,7 +1351,7 @@ $block: ".boss-table"
         width: 14%
 
       #{$block}_page_csv-upload &
-        width: 11.1%
+        width: 11%
         border-right: 1px solid #eee
 
       #{$block}_page_holiday-requests &
@@ -1559,7 +1559,7 @@ $block: ".boss-table"
         width: 14%
 
       #{$block}_page_csv-upload &
-        width: 11.1%
+        width: 12%
         border-right: 1px solid #eee
 
       #{$block}_page_holiday-requests &
@@ -1733,7 +1733,7 @@ $block: ".boss-table"
         width: 14%
 
       #{$block}_page_csv-upload &
-        width: 11.1%
+        width: 11%
         border-right: 1px solid #eee
 
       #{$block}_page_holiday-requests &
@@ -1888,7 +1888,7 @@ $block: ".boss-table"
         width: 14%
 
       #{$block}_page_csv-upload &
-        width: 11.1%
+        width: 11%
         border-right: 1px solid #eee
 
       #{$block}_page_finance-reports &,
@@ -2007,7 +2007,7 @@ $block: ".boss-table"
         width: 11%
 
       #{$block}_page_csv-upload &
-        width: 11.1%
+        width: 11%
         border-right: 1px solid #eee
 
       #{$block}_page_finance-reports &,
@@ -2103,7 +2103,7 @@ $block: ".boss-table"
         width: 120px
 
       #{$block}_page_csv-upload &
-        width: 11.1%
+        width: 11%
         border-right: 1px solid #eee
 
       #{$block}_page_finance-reports &,
@@ -2167,7 +2167,7 @@ $block: ".boss-table"
         padding-right: 10px
 
       #{$block}_page_csv-upload &
-        width: 11.1%
+        width: 11%
         padding-right: 10px
 
       #{$block}_page_finance-reports &
